Deployments/forcloudingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-static-address
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /admin
            backend:
              serviceName: admin-service
              servicePort: 80
          - path: /inventory
            backend:
              serviceName: inventory-service
              servicePort: 80
          - path: /order
            backend:
              serviceName: order-service
              servicePort: 80
